//
// Copyright 2019 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

import "proto/handle.proto";

package oak.log;

// This message defines the data that is passed as a log message to a logging pseudo-node. It
// provides a "schema" to keep the logging pseudo-node in sync with the internal representation of
// log messages in Oak SDK.
message LogMessage {
  // The source file containing the message.
  string file = 1;

  // The line containing the message.
  uint32 line = 2;

  // The verbosity level of the message.
  Level level = 3;

  // The message body.
  string message = 4;
}

// Logging levels as defined in https://docs.rs/log/0.4.10/log/enum.Level.html.
// UNKNOWN_LEVEL is added as the default value.
enum Level {
  UNKNOWN_LEVEL = 0;
  ERROR = 1;
  WARN = 2;
  INFO = 3;
  DEBUGGING = 4;
  TRACE = 5;
}

// A convenience message that may be used as init message by nodes that only expect to receive a
// single handle to a log node at startup.
message LogInit {
  oak.handle.Sender log_sender = 1 [(oak.handle.message_type) = ".oak.log.LogMessage"];
}
